# minicfg

./: CMakeLists.txt  README.md
src/: minicfg.cc  minicfg.h
